# agent-memory-kernel

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SPEC.md  pyproject.toml
.github/workflows/: tests.yml
adapters/hermes_provider/: README.md  hermes_provider.py
docs/: adapter-certification.md  adapter-contract.md  amk-000-kernel-invariants.md  amk-native-memory-revisions-and-bounded-recall.md  backlog-cutover.md  compatibility-policy.md  core-status-audit.md  cross-model-context-contract.md  default-packs.md  end-to-end-vertical-slice.md  evidence-matrix.md  extensions.md  full-memory-gap-plan.md  hermes-integration.md  hosted-roadmap.md  implementation-plan.md  invariant-verifier-map.md  keeper-extraction.md  kernel-charter.md  mcp.md  memory-contract.md  memory-lifecycle-contract.md  memory-tree-pack.md  observability.md  production-rollout.md  prompt-keeper-snapshots.md  public-readiness-todo.md  recovery.md  release-checklist.md  resource-budgets.md  review-workflow.md  roadmap.md  runtime-contract.md  security-identity-contract.md  threat-model.md  trust-and-security.md  v0-memory-contract.md  what-is-amk.md
examples/agent-loop-demo/: README.md
tests/: test_backup_migration.py  test_contract_acceptance.py  test_embeddings_contract.py  test_graph_commands.py  test_http_auth.py  test_keeper_eval.py  test_llm_keeper_contract.py  test_mcp_server.py  test_memory_observability.py  test_memory_store.py  test_openai_extractor.py  test_operational_failure.py  test_orchestrator.py  test_review_inbox.py  test_server_ui.py  test_worker.py
(+28 files in other folders)
